Create a simple authentication flow with session tokens stored in memory

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Auth bootstrap user (created once if missing)
+app.auth.bootstrap.user.username=root
+app.auth.bootstrap.user.password=rootPassword
+app.auth.bootstrap.user.role=USER
+
 # CORS Configuration (allow frontend to connect)
 # You'll need to configure CORS in your code or add this:
 # spring.web.cors.allowed-origins=http://localhost:3000
