--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,15 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -47,6 +50,12 @@
   "devDependencies": {
     "jsdom": "^22.1.0",
     "msw": "^2.12.10",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "storybook": "^10.2.10",
+    "@storybook/react-webpack5": "^10.2.10",
+    "@storybook/preset-create-react-app": "^10.2.10",
+    "webpack": "^5.105.2",
+    "prop-types": "^15.8.1",
+    "eslint-plugin-storybook": "^10.2.10"
   }
 }
