Create the base layout for the dashboard

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:sqlite:../maplewood_school.sqlite
+spring.datasource.url=jdbc:sqlite:./maplewood_school.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 # JPA Configuration
