--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.9.3",
     "web-vitals": "^2.1.4",
@@ -48,14 +49,14 @@
     ]
   },
   "devDependencies": {
+    "@storybook/preset-create-react-app": "^10.2.10",
+    "@storybook/react-webpack5": "^10.2.10",
+    "eslint-plugin-storybook": "^10.2.10",
     "jsdom": "^22.1.0",
     "msw": "^2.12.10",
-    "vitest": "^0.34.6",
-    "storybook": "^10.2.10",
-    "@storybook/react-webpack5": "^10.2.10",
-    "@storybook/preset-create-react-app": "^10.2.10",
-    "webpack": "^5.105.2",
     "prop-types": "^15.8.1",
-    "eslint-plugin-storybook": "^10.2.10"
+    "storybook": "^10.2.10",
+    "vitest": "^0.34.6",
+    "webpack": "^5.105.2"
   }
 }
