--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,9 +54,15 @@
     "eslint-plugin-storybook": "^10.2.10",
     "jsdom": "^22.1.0",
     "msw": "^2.12.10",
+    "msw-storybook-addon": "^2.0.6",
     "prop-types": "^15.8.1",
     "storybook": "^10.2.10",
     "vitest": "^0.34.6",
     "webpack": "^5.105.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
